# virtual-proxy

./: .gitignore  CHANGELOG.md  README.md
docs/: architecture.md  notes_capture.md  todo.md
driver/: DualSense_HID_ReportDescriptor.h
driver/driver_stub/: README.md
engine/: CMakeLists.txt
engine/src/: AudioWorker.cpp  AudioWorker.h  BluetoothSender.cpp  BluetoothSender.h  RealDeviceIO.cpp  RealDeviceIO.h  RingBuffer.h  VirtualHID.cpp  VirtualHID.h  main.cpp
